--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             // Optional: You can perform form validation or checks here
             
             // After validation or confirmation, redirect to another page
-            window.location.href = "anotherPage.html"; // Replace with your destination page
+            window.location.href = "main_inv.html"; // Replace with your destination page
         });
     </script>
 </body>
