--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Animated Text -->
     <div class="animated-text">
-      <p>We are <span class="cooking">cooking</span> something nice...</p>
+      <p>We are <span class="cooking">cooking</span> something cool...</p>
     </div>
 
     <!-- Contact Info -->
