--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bistro Bar Landing Page</title>
+  <title>ONTCY INTRANET</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <a class="weatherwidget-io" href="https://forecast7.com/en/34d11n117d59/rancho-cucamonga/?unit=us" data-label_1="RANCHO CUCAMONGA" data-label_2="WEATHER" data-font="Roboto" data-icons="Climacons Animated" data-days="5" data-theme="dark" >RANCHO CUCAMONGA WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
   <div class="landing-container">
     <!-- Bistro Logo -->
     <img src="bistro-logo.webp" alt="Bistro Logo" class="bistro-logo">
