--- a/index.html
+++ b/index.html
@@ -7,10 +7,30 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a class="weatherwidget-io" href="https://forecast7.com/en/34d11n117d59/rancho-cucamonga/?unit=us" data-label_1="RANCHO CUCAMONGA" data-label_2="WEATHER" data-font="Roboto" data-icons="Climacons Animated" data-days="5" data-theme="dark" >RANCHO CUCAMONGA WEATHER</a>
-<script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
+<!-- Weather Widget Section -->
+  <section class="weather-widget-section">
+    <a class="weatherwidget-io" 
+       href="https://forecast7.com/en/34d11n117d59/rancho-cucamonga/?unit=us" 
+       data-label_1="RANCHO CUCAMONGA" 
+       data-label_2="WEATHER" 
+       data-font="Roboto" 
+       data-icons="Climacons Animated" 
+       data-days="5" 
+       data-theme="dark">
+      RANCHO CUCAMONGA WEATHER
+    </a>
+    <script>
+      !function(d,s,id){
+        var js,fjs=d.getElementsByTagName(s)[0];
+        if(!d.getElementById(id)){
+          js=d.createElement(s);
+          js.id=id;
+          js.src='https://weatherwidget.io/js/widget.min.js';
+          fjs.parentNode.insertBefore(js,fjs);
+        }
+      }(document,'script','weatherwidget-io-js');
+    </script>
+  </section>
   <div class="landing-container">
     <!-- Bistro Logo -->
     <img src="bistro-logo.webp" alt="Bistro Logo" class="bistro-logo">
